...
      />

      {/* Tab 3: Me (Settings) */}
      <Tabs.Screen
        name="settings"
        options={{
          title: 'Me',
          headerShown: false,
          popToTopOnBlur: true,
          tabBarIcon: ({ color }) => <Ionicons name="person" size={ICON_SIZE} color={color} />,
        }}
      />

...
