...
  'book-outline': 'book',
  'chatbubble-outline': 'bubble.left',
  chatbubbles: 'bubble.left.and.bubble.right',
  'chatbubbles-outline': 'bubble.left.and.bubble.right',
  checkmark: 'checkmark',
  'checkmark-circle': 'checkmark.circle',
  'chevron-back': 'chevron.backward',
  'chevron-down': 'chevron.down',
  'chevron-forward': 'chevron.forward',
  close: 'xmark',
  'close-circle': 'xmark.circle',
  cloud: 'cloud',
  'cloud-offline': 'icloud.slash',
...
